--- a/jhlee-html-1.html
+++ b/jhlee-html-1.html
@@ -6,13 +6,30 @@
 </head>
 
 <body>
+	<ul>
+		<li><a href="https://test.api.idev.ahri.pw/" title="main">메인화면</a></li>
+		<li>list2</li>
+		<li>list3</li>
+	</ul>
 	안녕하세요!
 	<strong>이것은 강조된 텍스트입니다.</strong>
 	<u>이것은 밑줄이 쳐진 텍스트입니다.</u>
 	<strong>강조와 <u>밑줄을</u></strong>동시에 사용할수도 있습니다.
 	<h1>제목1</h1><h2>제목2</h2><h3>제목3</h3><h4>제목4</h4><h5>제목5</h5><h6>제목6</h6>
 	<br>이것은 줄바꿈입니다.
-	<p>이것은 문단입니다.<span style="font-size:22px;">글자 크기 바꾸</span></p>
-	<img src="https://www.bfy.kr/files/garam.jpg"></img><br>여기까지 11강
+	<p>이것은 문단입니다.<span style="font-size:22px;">글자 크기 바꾸기</span></p>
+	<img src="https://www.bfy.kr/files/garam.jpg" alt="garam">
+	<br>여기까지 11강
+	<ul>
+		<li>list1</li>
+		<li>list2</li>
+		<li>list3</li>
+	</ul>
+	<ol>
+		<li>list1</li>
+		<li>list2</li>
+		<li>list3</li>
+	</ol>
+	<a href="https://www.bfy.kr/" target="_blank" title="test link">Link Test</a>
 </body>
 </html>
