--- a/jhlee-test/jhlee-html-1.html
+++ b/jhlee-test/jhlee-html-1.html
@@ -7,7 +7,7 @@
 
 <body>
 	<ul>
-		<li><a href="https://test.api.idev.ahri.pw/" title="main">메인화면</a></li>
+		<li><a href="../index.html" title="main">메인화면</a></li>
 		<li>list2</li>
 		<li>list3</li>
 	</ul>
