--- a/jhlee-test/game.html
+++ b/jhlee-test/game.html
@@ -6,6 +6,7 @@
 </head>
 <script src="redirect.js"></script>
 <script src="game.js"></script>
+<script src="minesweeper.js"></script>
 <body>
 </body>
 </html>
