--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Minesweeper - Home</title>
+<link rel="stylesheet" href="home.css">
 </head>
 <script src="redirect.js"></script>
 <script src="home.js"></script>
