--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Minesweeper - Game</title>
+<link rel="stylesheet" href="game.css">
 </head>
 <script src="redirect.js"></script>
 <script src="minesweeper.js"></script>
