--- a/jew.html
+++ b/jew.html
@@ -8,7 +8,7 @@
             var value = document.getElementById('cnt').value;
             var a = parseInt(value);
             var flagbtn = document.getElementById('res');
-            flagbtn.set('value', a/77 + "");
+            flagbtn.setAttribute('value', a/77 + "");
         }
     </script>
     <script>
