--- a/jew.html
+++ b/jew.html
@@ -21,6 +21,6 @@
     <input type="button" value="JEW->num 변환" onclick="xchange()"></p>
     
     <p>(*** KSI Unit: 정은우의 수학 성적으로부터 비롯된 KSA 대표 단위 체계)</p>
-    <img src="jew.jpg" alt"jew">
+    <img src="jew.jpg" alt="jew">
 </body>
 </html>
