home - css commit 1

--- a/home.html
+++ b/home.html
@@ -10,6 +10,6 @@
 <body>
 	<input id="xsize" type="text">
 	<input id="ysize" type="text">
-	<input type="button" value="play" onclick="generate()">
+	<input id = "play" type="button" value="play" onclick="generate()">
 </body>
 </html>
