homt - css, html commit (2)

--- a/home.html
+++ b/home.html
@@ -8,8 +8,13 @@
 <script src="redirect.js"></script>
 <script src="home.js"></script>
 <body>
-	<input id="xsize" type="text">
-	<input id="ysize" type="text">
-	<input id = "play" type="button" value="play" onclick="generate()">
+	<h1>MINE WEEPER</h1>
+	<div id="box">
+		<div id = "xy">
+			<input id="xsize" type="text">
+			<input id="ysize" type="text">
+		</div>
+		<input id = "play" type="button" value="play" onclick="generate()">
+	</div>
 </body>
 </html>
