--- a/home.html
+++ b/home.html
@@ -8,13 +8,18 @@
 <script src="redirect.js"></script>
 <script src="home.js"></script>
 <body>
-	<h1>MINE WEEPER</h1>
+	<h1>MINESWEEPER</h1>
 	<div id="box">
 		<div id = "xy">
-			<input id="xsize" type="text">
-			<input id="ysize" type="text">
+			<input class="xy" id="xsize" type="text">
+			<input class="xy" id="ysize" type="text">
 		</div>
-		<input id = "play" type="button" value="play" onclick="generate()">
+		<div id="playButton">
+			<input id = "play" type="button" value="PLAY" onclick="generate()">
+		</div>
 	</div>
 </body>
 </html>
+
+
+
