--- a/game.html
+++ b/game.html
@@ -8,6 +8,6 @@
 <script src="redirect.js"></script>
 <script src="minesweeper.js"></script>
 <script src="game.js"></script>
-<body>
+<body oncontextmenu="return false;">
 </body>
 </html>
