--- a/home.html
+++ b/home.html
@@ -14,6 +14,12 @@
 			<input class="xy" id="xsize" type="text" onkeyup="if(window.event.keyCode==13){generate()}">
 			<input class="xy" id="ysize" type="text" onkeyup="if(window.event.keyCode==13){generate()}">
 		</div>
+        <select id="difficulty">
+            <option value="easy" selected>easy</option>
+            <option value="normal">normal</option>
+            <option value="hard">hard</option>
+            <option value="hell">hell</option>
+        </select>
 		<div id="playButton">
 			<input id = "play" type="button" value="PLAY" onclick="generate()">
 		</div>
