change font of number

--- a/game.html
+++ b/game.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>Minesweeper - Game</title>
 <link rel="stylesheet" href="game.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
 </head>
 <script src="redirect.js"></script>
 <script src="minesweeper.js"></script>
