add comment to html

--- a/home.html
+++ b/home.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<!--
+IDEV Project 'WEBStudy' - Minesweeper
+Copyright (c) 2021 김민우, 김예린, 이종현
+All Rights Reserved
+
+home.html
+home page
+-->
 <html>
 <head>
 <meta charset="utf-8">
