--- a/game.html
+++ b/game.html
@@ -16,6 +16,7 @@ game page
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
 </head>
 <script src="redirect.js"></script>
+<script src="bot.js"></script>
 <script src="minesweeper.js"></script>
 <script src="game.js"></script>
 <body oncontextmenu="return false;">
