add exact mode checkbox

--- a/home.html
+++ b/home.html
@@ -30,6 +30,7 @@ home page
 				<option value="hard">hard</option>
 				<option value="hell">hell</option>
 			</select>
+            <label id="mode"><input type="checkbox" name="em" value="t"> Exact Mode (무조건 깰 수 있음, 매우 높은 성능 요구)</label>
 			<input id = "play" type="button" value="PLAY" onclick="generate()">
 		</div>
 	</div>
