--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>index</title>
-</head>
-
-<body>
-	index
-</body>
-</html>
+<meta http-equiv="refresh" content="0; URL=home.html" />
