--- a/game.html
+++ b/game.html
@@ -7,21 +7,23 @@ All Rights Reserved
 game.html
 game page
 -->
-<html>
+<html lang="ko">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper - Game</title>
     <link rel="stylesheet" href="game.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
 </head>
-<script src="redirect.js"></script>
-<script src="bot.js"></script>
-<script src="minesweeper.js"></script>
-<script src="game.js"></script>
 
 <body oncontextmenu="return false;">
+    <script src="redirect.js"></script>
+    <script src="bot.js"></script>
+    <script src="minesweeper.js"></script>
+    <script src="game.js"></script>
 </body>
 
 </html>
