--- a/home.html
+++ b/home.html
@@ -7,26 +7,30 @@ All Rights Reserved
 home.html
 home page
 -->
-<html>
+<html lang="ko">
 
 <head>
-	<meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Minesweeper - Home</title>
 	<link rel="stylesheet" href="home.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
 </head>
-<script src="redirect.js"></script>
-<script src="home.js"></script>
 
 <body>
+	<script src="redirect.js"></script>
+	<script src="home.js"></script>
 	<h1>MINESWEEPER</h1>
 	<div id="box">
 		<div id="xy">
-			<input class="xy" id="xsize" type="text" onkeyup="if(window.event.keyCode==13){generate()}">
-			<input class="xy" id="ysize" type="text" onkeyup="if(window.event.keyCode==13){generate()}">
+			<input class="xy" aria-label="x-size" id="xsize" type="text" onkeyup="if(window.event.keyCode==13){generate()}">
+			<input class="xy" aria-label="y-size" id="ysize" type="text" onkeyup="if(window.event.keyCode==13){generate()}">
 		</div>
 
 		<div id="second_floor">
-			<select id="difficulty">
+			<select aria-label="difficulty" id="difficulty">
 				<option value="easy" selected>easy</option>
 				<option value="normal">normal</option>
 				<option value="hard">hard</option>
