--- a/game.html
+++ b/game.html
@@ -17,6 +17,8 @@ game page
     <link rel="stylesheet" href="game.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
+    <link rel="prefetch" href="img/flag.png" />
+    <link rel="prefetch" href="img/mine.png" />
 </head>
 
 <body oncontextmenu="return false;">
