chore: fix linting issues

--- a/home.html
+++ b/home.html
@@ -8,41 +8,56 @@ home.html
 home page
 -->
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Minesweeper - Home</title>
+    <link rel="stylesheet" href="home.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Minesweeper - Home</title>
-	<link rel="stylesheet" href="home.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
-</head>
+  <body>
+    <script src="redirect.js"></script>
+    <script src="home.js"></script>
+    <h1>MINESWEEPER</h1>
+    <div id="box">
+      <div id="xy">
+        <input
+          class="xy"
+          aria-label="x-size"
+          id="xsize"
+          type="text"
+          onkeyup="if(window.event.keyCode==13){generate()}"
+        />
+        <input
+          class="xy"
+          aria-label="y-size"
+          id="ysize"
+          type="text"
+          onkeyup="if(window.event.keyCode==13){generate()}"
+        />
+      </div>
 
-<body>
-	<script src="redirect.js"></script>
-	<script src="home.js"></script>
-	<h1>MINESWEEPER</h1>
-	<div id="box">
-		<div id="xy">
-			<input class="xy" aria-label="x-size" id="xsize" type="text" onkeyup="if(window.event.keyCode==13){generate()}">
-			<input class="xy" aria-label="y-size" id="ysize" type="text" onkeyup="if(window.event.keyCode==13){generate()}">
-		</div>
-
-		<div id="second_floor">
-			<select aria-label="difficulty" id="difficulty">
-				<option value="easy" selected>easy</option>
-				<option value="normal">normal</option>
-				<option value="hard">hard</option>
-				<option value="hell">hell</option>
-			</select>
-			<label id="level"><input id="mode" type="checkbox" name="em" value="t"> Exact Mode (무조건 깰 수 있음, 매우 높은 성능
-				요구)</label>
-		</div>
-		<div id="third_floor">
-			<input id="play" type="button" value="PLAY" onclick="generate()">
-		</div>
-	</div>
-</body>
-
+      <div id="second_floor">
+        <select aria-label="difficulty" id="difficulty">
+          <option value="easy" selected>easy</option>
+          <option value="normal">normal</option>
+          <option value="hard">hard</option>
+          <option value="hell">hell</option>
+        </select>
+        <label id="level"
+          ><input id="mode" type="checkbox" name="em" value="t" /> Exact Mode
+          (무조건 깰 수 있음, 매우 높은 성능 요구)</label
+        >
+      </div>
+      <div id="third_floor">
+        <input id="play" type="button" value="PLAY" onclick="generate()" />
+      </div>
+    </div>
+  </body>
 </html>
